Non sono riuscito a lavorarci e quindi non compila

--- a/CoreFactory/CoreFactory.csproj
+++ b/CoreFactory/CoreFactory.csproj
@@ -29,5 +29,12 @@
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
     <Compile Include="ImageFactory.cs" />
+    <Compile Include="DataManagerFactory.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CoreLibrary\CoreLibrary.csproj">
+      <Project>{2C76C137-DC34-41DE-AAE8-6D036A5B95F0}</Project>
+      <Name>CoreLibrary</Name>
+    </ProjectReference>
   </ItemGroup>
 </Project>
