--- a/CoreLibrary/CoreLibrary.csproj
+++ b/CoreLibrary/CoreLibrary.csproj
@@ -28,22 +28,21 @@
   </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
-    <Compile Include="Attribute\Attribute.cs" />
-    <Compile Include="DataEntityBase\DataEntityBase.cs" />
     <Compile Include="DataBinding\DataBinding.cs" />
-    <Compile Include="Utility\MobileOptions.cs" />
     <Compile Include="Enum\Enum.cs" />
-    <Compile Include="AbstractDataEntityManager\AbstractDataEntityManager.cs" />
-    <Compile Include="SQLite\SQLite.cs" />
     <Compile Include="Utility\Utility.cs" />
+    <Compile Include="Interface\UIInterface.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Attribute\" />
-    <Folder Include="DataEntityBase\" />
     <Folder Include="DataBinding\" />
     <Folder Include="Utility\" />
     <Folder Include="Enum\" />
-    <Folder Include="AbstractDataEntityManager\" />
-    <Folder Include="SQLite\" />
+    <Folder Include="Interface\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="System.Xml" />
+    <Reference Include="System.Core" />
+    <Reference Include="System" />
+    <Reference Include="System.Runtime.Serialization" />
   </ItemGroup>
 </Project>
