--- a/DataEntity/DataEntity.csproj
+++ b/DataEntity/DataEntity.csproj
@@ -27,4 +27,16 @@
     <ConsolePause>false</ConsolePause>
   </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <ItemGroup>
+    <Folder Include="Tabelle\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="Tabelle\AreeData.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CoreLibrary\CoreLibrary.csproj">
+      <Project>{2C76C137-DC34-41DE-AAE8-6D036A5B95F0}</Project>
+      <Name>CoreLibrary</Name>
+    </ProjectReference>
+  </ItemGroup>
 </Project>
